каталог и главная без яваскрипта

--- a/index.html
+++ b/index.html
@@ -69,27 +69,25 @@
 
           <div class="promo-bottom">
             <div class="promo-slider">
-              <input type="radio" id="promo-btn-1" name="toggle" checked>
-              <input type="radio" id="promo-btn-2" name="toggle">
+              <input type="radio" id="promo-btn-1" name="toggle-1" checked>
+              <input type="radio" id="promo-btn-2" name="toggle-1">
+              <label for="promo-btn-1" class="slider-left-btn"></label>
+              <label for="promo-btn-2" class="slider-right-btn"></label>
               <div class="slider-controls">
                 <label for="promo-btn-1"></label>
                 <label for="promo-btn-2"></label>
               </div>
               <div class="promo-slider-inner">
-                <!--<div class="promo-slider-slides">-->
-                  <div class="promo-slide-first">
-                    <p class="promo-slider-title">Перфораторы</p>
-                    <span class="promo-slider-description">Настоящие мужские игрушки</span>
-                    <!--<img src="img/drill-1.jpg" width="620" height="266" alt="Перфораторы">-->
-                    <a class="btn promo-slider-btn" href="catalog.html">Открыть каталог</a>
-                  </div>
-                  <div class="promo-slide-second">
-                    <p class="promo-slider-title">Дрели</p>
-                    <span class="promo-slider-description">Соседям на радость!</span>
-                    <!--<img src="img/drill-2.jpg" width="620" height="266" alt="Дрели">-->
-                    <a class="btn promo-slider-btn" href="catalog.html">Открыть каталог</a>
-                  </div>  
-                <!--</div>-->
+                <div class="promo-slide-first">
+                  <p class="promo-slider-title">Перфораторы</p>
+                  <span class="promo-slider-description">Настоящие мужские игрушки</span>
+                  <a class="btn promo-slider-btn" href="catalog.html">Открыть каталог</a>
+                </div>
+                <div class="promo-slide-second">
+                  <p class="promo-slider-title">Дрели</p>
+                  <span class="promo-slider-description">Соседям на радость!</span>
+                  <a class="btn promo-slider-btn" href="catalog.html">Открыть каталог</a>
+                </div>  
               </div>
             </div>
             <div class="promo-left">
@@ -102,7 +100,7 @@
                 <a class="promo-btn" href="#">Бесплатно</a>
               </div>
             </div>
-          </div>  
+          </div>
         </section>
 
         <section class="popular-goods">
@@ -122,7 +120,7 @@
               <div class="product-overlay">
                 <a class="product-buy" href="#">Купить</a>
                 <a class="product-bookmark" href="#">В закладки</a>
-              </div>             
+              </div>
             </article>
 
             <article class="product">
@@ -135,7 +133,7 @@
               <div class="product-overlay">
                 <a class="product-buy" href="#">Купить</a>
                 <a class="product-bookmark" href="#">В закладки</a>
-              </div>             
+              </div>
             </article>
 
             <article class="product">
@@ -148,7 +146,7 @@
               <div class="product-overlay">
                 <a class="product-buy" href="#">Купить</a>
                 <a class="product-bookmark" href="#">В закладки</a>
-              </div>             
+              </div>
             </article>
 
             <article class="product flag flag-new">
@@ -160,7 +158,7 @@
               <div class="product-overlay">
                 <a class="product-buy" href="#">Купить</a>
                 <a class="product-bookmark" href="#">В закладки</a>
-              </div>             
+              </div>
             </article>
           </div>
         </section>
@@ -173,12 +171,12 @@
           <article class="producers">
             <a class="producers-img" href="#"><img src="img/bosch2.png" width="220" height="145" alt="BOSCH"></a>
             <a class="producers-img" href="#"><img src="img/makita2.png" width="220" height="145" alt="Makita"></a>
-            <a class="producers-img" href="#"><img src="img/dewalt2.png" width="220" height="145" alt="DeWalt"></a>           
-            <a class="producers-img" href="#"><img src="img/interskol2.png" width="220" height="145" alt="Интерскол"></a>           
-            <a class="producers-img" href="#"><img src="img/hitachi2.png" width="220" height="145" alt="Hitachi"></a>           
-            <a class="producers-img" href="#"><img src="img/lg2.png" width="220" height="145" alt="LG"></a>            
-            <a class="producers-img" href="#"><img src="img/aeg2.png" width="220" height="145" alt="AEG"></a>            
-            <a class="producers-img" href="#"><img src="img/metabo2.png" width="220" height="145" alt="Metabo"></a>     
+            <a class="producers-img" href="#"><img src="img/dewalt2.png" width="220" height="145" alt="DeWalt"></a>
+            <a class="producers-img" href="#"><img src="img/interskol2.png" width="220" height="145" alt="Интерскол"></a>
+            <a class="producers-img" href="#"><img src="img/hitachi2.png" width="220" height="145" alt="Hitachi"></a>
+            <a class="producers-img" href="#"><img src="img/lg2.png" width="220" height="145" alt="LG"></a>
+            <a class="producers-img" href="#"><img src="img/aeg2.png" width="220" height="145" alt="AEG"></a>
+            <a class="producers-img" href="#"><img src="img/metabo2.png" width="220" height="145" alt="Metabo"></a>
           </article>
         </section>
       </div>  
@@ -189,9 +187,9 @@
           <p class="service-description">Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           <div class="service-slider">
             <div class="service-slider-menu">
-              <input type="radio" id="service-btn-1" name="toggle" checked>
-              <input type="radio" id="service-btn-2" name="toggle">
-              <input type="radio" id="service-btn-3" name="toggle">
+              <input type="radio" id="service-btn-1" name="toggle-3" checked>
+              <input type="radio" id="service-btn-2" name="toggle-3">
+              <input type="radio" id="service-btn-3" name="toggle-3">
               <div class="radio-label">
                 <label for="service-btn-1">Доставка</label>
                 <label for="service-btn-2">Гарантия</label>
@@ -228,7 +226,7 @@
         <div class="company-contacts">
           <section class="about-us">
             <h2 class="title-second">Компания «ТЕХНОМАРТ»</h2>
-            <p class="company-contacts-description">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+            <p class="company-contacts-description-1">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
             <p class="company-contacts-description-2">Мы можем доставить ваш товар в самые отдалённые точки России! Техномарт работает со многими транспортными компаниями:</p>
             <ul class="delivery-companies">
               <li>Деловые линии</li>
@@ -269,7 +267,7 @@
                 <li><a href="#">Доставка</a></li>
                 <li><a href="#">Контакты</a></li>
               </ul>
-            </div>  
+            </div>
             <div class="footer-contact-bottom">
               <ul class="footer-site-navigation">
                 <li><a class="yellow-text" href="#">Материалы</a></li>
@@ -277,8 +275,8 @@
                 <li><a class="yellow-text" href="#">Инструмент</a></li>
                 <li><a class="yellow-text" href="#">Спецпредложения</a></li>
               </ul>
-            </div> 
-          </div>    
+            </div>
+          </div>
         </div>
       </div> 
 
@@ -326,7 +324,6 @@
     <section class="modal modal-map visually-hidden">
       <h2 class="visually-hidden title-second">Как нас найти</h2>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253002912!2d30.320858715826557!3d59.938719169054494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1550844353752" width="943" height="449" frameborder="0" style="border:0" allowfullscreen></iframe>
-      <!--<img src="img/map-popup.png" width="943" height="449" alt="Офис компании по адресу г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">-->
       <button class="modal-close" type="button">Закрыть</button>
     </section>
 
