--- a/catalog.html
+++ b/catalog.html
@@ -157,7 +157,7 @@
                 <span class="product-old-price">22500 Р.</span>
                 <a class="product-btn" href="#">15500 Р.</a>
                 <div class="product-overlay">
-                  <a class="product-buy" href="#">Купить</a>
+                  <a class="product-buy cart-link" href="#">Купить</a>
                   <a class="product-bookmark" href="#">В закладки</a>
                 </div>
               </article>
@@ -170,7 +170,7 @@
                 <span class="product-old-price">30500 Р.</span>
                 <a class="product-btn" href="#">25500 Р.</a>
                 <div class="product-overlay">
-                  <a class="product-buy" href="#">Купить</a>
+                  <a class="product-buy cart-link" href="#">Купить</a>
                   <a class="product-bookmark" href="#">В закладки</a>
                 </div>
               </article>
@@ -182,7 +182,7 @@
                 <h3 class="product-title">Перфоратор BOSCH BFG 2000</h3>
                 <a class="product-btn no-discount" href="#">12500 Р.</a>
                 <div class="product-overlay">
-                  <a class="product-buy" href="#">Купить</a>
+                  <a class="product-buy cart-link" href="#">Купить</a>
                   <a class="product-bookmark" href="#">В закладки</a>
                 </div>
               </article>
@@ -195,7 +195,7 @@
                 <span class="product-old-price">22500 Р.</span>
                 <a class="product-btn" href="#">15500 Р.</a>
                 <div class="product-overlay">
-                  <a class="product-buy" href="#">Купить</a>
+                  <a class="product-buy cart-link" href="#">Купить</a>
                   <a class="product-bookmark" href="#">В закладки</a>
                 </div>
               </article>
@@ -208,7 +208,7 @@
                 <span class="product-old-price">30500 Р.</span>
                 <a class="product-btn" href="#">25500 Р.</a>
                 <div class="product-overlay">
-                  <a class="product-buy" href="#">Купить</a>
+                  <a class="product-buy cart-link" href="#">Купить</a>
                   <a class="product-bookmark" href="#">В закладки</a>
                 </div>
               </article>
@@ -220,7 +220,7 @@
                 <h3 class="product-title">Перфоратор BOSCH BFG 2000</h3>
                 <a class="product-btn no-discount" href="#">12500 Р.</a>
                 <div class="product-overlay">
-                  <a class="product-buy" href="#">Купить</a>
+                  <a class="product-buy cart-link" href="#">Купить</a>
                   <a class="product-bookmark" href="#">В закладки</a>
                 </div>
               </article>
@@ -233,7 +233,7 @@
                 <span class="product-old-price">22500 Р.</span>
                 <a class="product-btn" href="#">15500 Р.</a>
                 <div class="product-overlay">
-                  <a class="product-buy" href="#">Купить</a>
+                  <a class="product-buy cart-link" href="#">Купить</a>
                   <a class="product-bookmark" href="#">В закладки</a>
                 </div>
               </article>
@@ -246,7 +246,7 @@
                 <span class="product-old-price">30500 Р.</span>
                 <a class="product-btn" href="#">25500 Р.</a>
                 <div class="product-overlay">
-                  <a class="product-buy" href="#">Купить</a>
+                  <a class="product-buy cart-link" href="#">Купить</a>
                   <a class="product-bookmark" href="#">В закладки</a>
                 </div>
               </article>
@@ -258,7 +258,7 @@
                 <h3 class="product-title">Перфоратор BOSCH BFG 2000</h3>
                 <a class="product-btn no-discount" href="#">12500 Р.</a>
                 <div class="product-overlay">
-                  <a class="product-buy" href="#">Купить</a>
+                  <a class="product-buy cart-link" href="#">Купить</a>
                   <a class="product-bookmark" href="#">В закладки</a>
                 </div>
               </article>
@@ -354,7 +354,7 @@
       </div>
     </footer>
 
-    <section class="modal modal-cart visually-hidden">
+    <section class="modal modal-cart">
       <h2 class="visually-hidden title-second">Добавление товаров в корзину</h2>
       <p class="modal-cart-description">Товар добавлен в корзину!</p>
       <div class="modal-cart-btn">
@@ -363,5 +363,6 @@
       </div>
       <button class="modal-close" type="button">Закрыть</button>
     </section>
+    <script src="js/catalog-script.js"></script>
   </body>
 </html>
