--- a/catalog.html
+++ b/catalog.html
@@ -26,7 +26,7 @@
         <div class="header-center">
           <h1 class="title-description">Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</h1>
           <div class="header-contacts">
-            <p class="phone-number">+7 (812) 555-05-55</p>
+            <a class="phone-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
             <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
           <div class="user-corner">
@@ -93,24 +93,39 @@
                 <legend class="filter-title">Производители:</legend>
                 <ul>
                   <li class="filter-producers-option">
-                    <input class="visually-hidden filter-input-checkbox" type="checkbox" name="option-1" id="filter-bosch" value="BOSCH" checked>
-                    <label for="filter-bosch">BOSCH</label>
+                    <label>
+                      <input class="visually-hidden filter-input-checkbox" type="checkbox" name="option-1" id="filter-bosch" value="BOSCH" checked>
+                      <span class="check-box"></span>
+                      BOSCH
+                    </label>
                   </li>
                   <li class="filter-producers-option">
-                    <input class="visually-hidden filter-input-checkbox" type="checkbox" name="option-2" id="filter-interskol" value="Интерскол">
-                    <label for="filter-interskol">Интерскол</label>
+                    <label>
+                      <input class="visually-hidden filter-input-checkbox" type="checkbox" name="option-2" id="filter-interskol" value="Интерскол">
+                      <span class="check-box"></span>
+                      Интерскол
+                    </label>
                   </li>
                   <li class="filter-producers-option">
-                    <input class="visually-hidden filter-input-checkbox" type="checkbox" name="option-3" id="filter-makita" value="Makita" checked>
-                    <label for="filter-makita">Makita</label>
+                    <label>
+                      <input class="visually-hidden filter-input-checkbox" type="checkbox" name="option-3" id="filter-makita" value="Makita" checked>
+                      <span class="check-box"></span>
+                      Makita
+                    </label>
                   </li>
                   <li class="filter-producers-option">
-                    <input class="visually-hidden filter-input-checkbox" type="checkbox" name="option-4" id="filter-dewalt" value="DeWalt">
-                    <label for="filter-dewalt">DeWalt</label>
+                    <label>
+                      <input class="visually-hidden filter-input-checkbox" type="checkbox" name="option-4" id="filter-dewalt" value="DeWalt">
+                      <span class="check-box"></span>
+                      DeWalt
+                    </label>
                   </li>
                   <li class="filter-producers-option">
-                    <input class="visually-hidden filter-input-checkbox" type="checkbox" name="option-5" id="filter-hitachi" value="Hitachi">
-                    <label for="filter-hitachi">Hitachi</label>
+                    <label for="filter-hitachi">
+                      <input class="visually-hidden filter-input-checkbox" type="checkbox" name="option-5" id="filter-hitachi" value="Hitachi">
+                      <span class="check-box"></span>
+                      Hitachi
+                    </label>
                   </li>
                 </ul>
               </fieldset>
@@ -119,12 +134,18 @@
                 <legend class="filter-title">Питание:</legend>
                 <ul>
                   <li class="filter-power-option">
-                    <input class="visually-hidden filter-input-radio" type="radio" name="option-6" id="filter-battery" value="battery" checked>
-                    <label for="filter-battery">Аккумуляторные</label>
+                    <label>
+                      <input class="visually-hidden filter-input-radio" type="radio" name="option-6" id="filter-battery" value="battery" checked>
+                      <span class="radio-box"></span>
+                      Аккумуляторные
+                    </label>
                   </li>
                   <li class="filter-power-option">
-                    <input class="visually-hidden filter-input-radio" type="radio" name="option-6" id="filter-mains" value="mains">
-                    <label for="filter-mains">Сетевые</label>
+                    <label>
+                      <input class="visually-hidden filter-input-radio" type="radio" name="option-6" id="filter-mains" value="mains">
+                      <span class="radio-box"></span>
+                      Сетевые
+                    </label>
                   </li>
                 </ul>
               </fieldset>
@@ -148,7 +169,6 @@
             </div>
 
             <div class="catalog-products-list">
-            <h2 class="visually-hidden title-second">Список товаров</h2>
               <article class="product">
                 <div class="product-image">
                   <img src="img/bfg-3000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
@@ -289,7 +309,7 @@
           <div class="footer-contact-left">
             <a class="logo-footer" href="index.html">Техномарт</a>
             <p class="address-footer">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-            +7 (812) 555-05-55</p>
+            <a class="address-footer" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
           </div>
           <div class="footer-contact-right">
             <div class="footer-contact-top"> 
