--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="header-center">
           <h1 class="title-description">Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</h1>
           <div class="header-contacts">
-            <p class="phone-number">+7 (812) 555-05-55</p>
+            <a class="phone-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
             <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
           <ul class="user-info">
@@ -54,7 +54,7 @@
       <div class="container">
         <section class="promo">
           <div class="promo-top">
-            <div class="promo-block promo-block-materials">
+            <div class="promo-block promo-block-materials flag flag-new">
               <p class="promo-block-title">Материалы</p>
               <a class="promo-btn" href="#">На любой вкус</a>
             </div>
@@ -170,14 +170,14 @@
             <a class="btn popular-btn" href="#">Все производители</a>
           </div>
           <article class="producers">
-            <a class="producers-img" href="#"><img src="img/bosch2.png" width="220" height="145" alt="BOSCH"></a>
-            <a class="producers-img" href="#"><img src="img/makita2.png" width="220" height="145" alt="Makita"></a>
-            <a class="producers-img" href="#"><img src="img/dewalt2.png" width="220" height="145" alt="DeWalt"></a>
-            <a class="producers-img" href="#"><img src="img/interskol2.png" width="220" height="145" alt="Интерскол"></a>
-            <a class="producers-img" href="#"><img src="img/hitachi2.png" width="220" height="145" alt="Hitachi"></a>
-            <a class="producers-img" href="#"><img src="img/lg2.png" width="220" height="145" alt="LG"></a>
-            <a class="producers-img" href="#"><img src="img/aeg2.png" width="220" height="145" alt="AEG"></a>
-            <a class="producers-img" href="#"><img src="img/metabo2.png" width="220" height="145" alt="Metabo"></a>
+            <a class="producers-img" href="#"><img src="img/bosch.png" width="220" height="145" alt="BOSCH"></a>
+            <a class="producers-img" href="#"><img src="img/makita.png" width="220" height="145" alt="Makita"></a>
+            <a class="producers-img" href="#"><img src="img/dewalt.png" width="220" height="145" alt="DeWalt"></a>
+            <a class="producers-img" href="#"><img src="img/interskol.png" width="220" height="145" alt="Интерскол"></a>
+            <a class="producers-img" href="#"><img src="img/hitachi.png" width="220" height="145" alt="Hitachi"></a>
+            <a class="producers-img" href="#"><img src="img/lg.png" width="220" height="145" alt="LG"></a>
+            <a class="producers-img" href="#"><img src="img/aeg.png" width="220" height="145" alt="AEG"></a>
+            <a class="producers-img" href="#"><img src="img/metabo.png" width="220" height="145" alt="Metabo"></a>
           </article>
         </section>
       </div>  
@@ -257,7 +257,7 @@
           <div class="footer-contact-left">
             <a class="logo-footer" href="index.html">Техномарт</a>
             <p class="address-footer">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-            +7 (812) 555-05-55</p>
+            <a class="address-footer" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
           </div>
           <div class="footer-contact-right">
             <div class="footer-contact-top"> 
