--- a/catalog.html
+++ b/catalog.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Каталог</title>
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i%7CPT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
@@ -177,7 +178,7 @@
                 <span class="product-old-price">22500 Р.</span>
                 <a class="product-btn" href="#">15500 Р.</a>
                 <div class="product-overlay">
-                  <a class="product-buy cart-link" href="#">Купить</a>
+                  <a class="product-buy cart-link" href="purchase.html">Купить</a>
                   <a class="product-bookmark" href="#">В закладки</a>
                 </div>
               </article>
@@ -190,7 +191,7 @@
                 <span class="product-old-price">30500 Р.</span>
                 <a class="product-btn" href="#">25500 Р.</a>
                 <div class="product-overlay">
-                  <a class="product-buy cart-link" href="#">Купить</a>
+                  <a class="product-buy cart-link" href="purchase.html">Купить</a>
                   <a class="product-bookmark" href="#">В закладки</a>
                 </div>
               </article>
@@ -202,7 +203,7 @@
                 <h3 class="product-title">Перфоратор BOSCH BFG 2000</h3>
                 <a class="product-btn no-discount" href="#">12500 Р.</a>
                 <div class="product-overlay">
-                  <a class="product-buy cart-link" href="#">Купить</a>
+                  <a class="product-buy cart-link" href="purchase.html">Купить</a>
                   <a class="product-bookmark" href="#">В закладки</a>
                 </div>
               </article>
@@ -215,7 +216,7 @@
                 <span class="product-old-price">22500 Р.</span>
                 <a class="product-btn" href="#">15500 Р.</a>
                 <div class="product-overlay">
-                  <a class="product-buy cart-link" href="#">Купить</a>
+                  <a class="product-buy cart-link" href="purchase.html">Купить</a>
                   <a class="product-bookmark" href="#">В закладки</a>
                 </div>
               </article>
@@ -228,7 +229,7 @@
                 <span class="product-old-price">30500 Р.</span>
                 <a class="product-btn" href="#">25500 Р.</a>
                 <div class="product-overlay">
-                  <a class="product-buy cart-link" href="#">Купить</a>
+                  <a class="product-buy cart-link" href="purchase.html">Купить</a>
                   <a class="product-bookmark" href="#">В закладки</a>
                 </div>
               </article>
@@ -240,7 +241,7 @@
                 <h3 class="product-title">Перфоратор BOSCH BFG 2000</h3>
                 <a class="product-btn no-discount" href="#">12500 Р.</a>
                 <div class="product-overlay">
-                  <a class="product-buy cart-link" href="#">Купить</a>
+                  <a class="product-buy cart-link" href="purchase.html">Купить</a>
                   <a class="product-bookmark" href="#">В закладки</a>
                 </div>
               </article>
@@ -253,7 +254,7 @@
                 <span class="product-old-price">22500 Р.</span>
                 <a class="product-btn" href="#">15500 Р.</a>
                 <div class="product-overlay">
-                  <a class="product-buy cart-link" href="#">Купить</a>
+                  <a class="product-buy cart-link" href="purchase.html">Купить</a>
                   <a class="product-bookmark" href="#">В закладки</a>
                 </div>
               </article>
@@ -266,7 +267,7 @@
                 <span class="product-old-price">30500 Р.</span>
                 <a class="product-btn" href="#">25500 Р.</a>
                 <div class="product-overlay">
-                  <a class="product-buy cart-link" href="#">Купить</a>
+                  <a class="product-buy cart-link" href="purchase.html">Купить</a>
                   <a class="product-bookmark" href="#">В закладки</a>
                 </div>
               </article>
@@ -278,7 +279,7 @@
                 <h3 class="product-title">Перфоратор BOSCH BFG 2000</h3>
                 <a class="product-btn no-discount" href="#">12500 Р.</a>
                 <div class="product-overlay">
-                  <a class="product-buy cart-link" href="#">Купить</a>
+                  <a class="product-buy cart-link" href="purchase.html">Купить</a>
                   <a class="product-bookmark" href="#">В закладки</a>
                 </div>
               </article>
@@ -308,8 +309,8 @@
         <div class="container footer-wrapper">
           <div class="footer-contact-left">
             <a class="logo-footer" href="index.html">Техномарт</a>
-            <p class="address-footer">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-            <a class="address-footer" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+            <p class="address-footer">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+            <a class="phone-footer" href="tel:+78125550555">+7 (812) 555-05-55</a>
           </div>
           <div class="footer-contact-right">
             <div class="footer-contact-top"> 
