--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Техномарт</title>
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i%7CPT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
@@ -12,7 +13,7 @@
     <header class="main-header">
       <div class="header-top">
         <div class="container header-top-wrapper">
-          <a class="logo-header" href="index.html">Техномарт</a>
+          <p class="logo-header">Техномарт</p>
           <form class="form-search" action="#" method="post">
             <input type="search" name="search" id="search" placeholder="Поиск:">
             <label class="search-label" for="search"></label>
@@ -119,7 +120,7 @@
               <span class="product-old-price">32500 Р.</span>
               <a class="product-btn" href="#">25500 Р.</a>
               <div class="product-overlay">
-                <a class="product-buy cart-link" href="#">Купить</a>
+                <a class="product-buy cart-link" href="purchase.html">Купить</a>
                 <a class="product-bookmark" href="#">В закладки</a>
               </div>
             </article>
@@ -132,7 +133,7 @@
               <span class="product-old-price">22500 Р.</span>
               <a class="product-btn" href="#">15500 Р.</a>
               <div class="product-overlay">
-                <a class="product-buy cart-link" href="#">Купить</a>
+                <a class="product-buy cart-link" href="purchase.html">Купить</a>
                 <a class="product-bookmark" href="#">В закладки</a>
               </div>
             </article>
@@ -145,7 +146,7 @@
               <span class="product-old-price">30500 Р.</span>
               <a class="product-btn" href="#">25500 Р.</a>
               <div class="product-overlay">
-                <a class="product-buy cart-link" href="#">Купить</a>
+                <a class="product-buy cart-link" href="purchase.html">Купить</a>
                 <a class="product-bookmark" href="#">В закладки</a>
               </div>
             </article>
@@ -157,7 +158,7 @@
               <h3 class="product-title">Перфоратор BOSCH BFG 2000</h3>
               <a class="product-btn no-discount" href="#">12500 Р.</a>
               <div class="product-overlay">
-                <a class="product-buy cart-link" href="#">Купить</a>
+                <a class="product-buy cart-link" href="purchase.html">Купить</a>
                 <a class="product-bookmark" href="#">В закладки</a>
               </div>
             </article>
@@ -228,7 +229,8 @@
           <section class="about-us">
             <h2 class="title-second">Компания «ТЕХНОМАРТ»</h2>
             <p class="company-contacts-description-1">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-            <p class="company-contacts-description-2">Мы можем доставить ваш товар в самые отдалённые точки России! Техномарт работает со многими транспортными компаниями:</p>
+            <p class="company-contacts-description-2">Мы можем доставить ваш товар в самые отдалённые точки России!</p>
+            <p class="company-contacts-description-2">Техномарт работает со многими транспортными компаниями:</p>
             <ul class="delivery-companies">
               <li>Деловые линии</li>
               <li>Автотрейдинг</li>
@@ -241,11 +243,11 @@
             <h2 class="title-second">Контакты</h2>
             <p class="company-contacts-description-3">Вы можете забрать товар сами, заехав в наш офис:</p>
             <div class="map-img">
-              <a class="map button-map" href="#">
+              <a class="map button-map" href="img/map-big.png" target="blank">
                 <img src="img/map.png" width="300" height="158" alt="Офис компании по адресу г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
-              </a>  
+              </a>
             </div>
-            <a href="#" class="btn contacts-btn">Заблудились? Напишите нам!</a>
+            <a href="writeus.html" class="btn contacts-btn">Заблудились? Напишите нам!</a>
           </section>
         </div>
       </div>   
@@ -256,8 +258,8 @@
         <div class="container footer-wrapper">
           <div class="footer-contact-left">
             <a class="logo-footer" href="index.html">Техномарт</a>
-            <p class="address-footer">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-            <a class="address-footer" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+            <p class="address-footer">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+            <a class="phone-footer" href="tel:+78125550555">+7 (812) 555-05-55</a>
           </div>
           <div class="footer-contact-right">
             <div class="footer-contact-top"> 
